--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,75 @@
 <!doctype html>
 <html><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
 <title>FRC 4123 Scouting</title>
 <link rel="stylesheet" href="/css/style.css"/>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
+<!-- Mobile navigation -->
+<div class="mobile-nav">
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <div class="mobile-menu" id="mobileMenu">
+    <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
+    <a href="/" onclick="toggleMenu()">Home</a>
+    <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
+    <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
+    <a href="/pages/team_summary.html" onclick="toggleMenu()">Team Summary</a>
+    <a href="/pages/match_simulator.html" onclick="toggleMenu()">Match Simulator</a>
+    <a href="/pages/rankings.html" onclick="toggleMenu()">Rankings</a>
+    <a href="/pages/raw_match.html" onclick="toggleMenu()">Raw Match Data</a>
+    <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
+    <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
+    <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
+  </div>
+</div>
+<script>
+// Mobile menu functionality
+function toggleMenu() {
+  const menu = document.getElementById('mobileMenu');
+  const isOpening = !menu.classList.contains('open');
+  menu.classList.toggle('open');
+  document.body.classList.toggle('menu-open', isOpening);
+  if (isOpening) {
+    setTimeout(() => {
+      menu.scrollTop = 0;
+    }, 50);
+  }
+}
+
+// Close menu when clicking outside
+document.addEventListener('click', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  const hamburger = document.querySelector('.hamburger');
+  if (menu.classList.contains('open') && 
+      !menu.contains(event.target) && 
+      event.target !== hamburger) {
+    toggleMenu();
+  }
+});
+
+// Close menu on escape key
+document.addEventListener('keydown', function(event) {
+  if (event.key === 'Escape') {
+    const menu = document.getElementById('mobileMenu');
+    if (menu.classList.contains('open')) {
+      toggleMenu();
+    }
+  }
+});
+
+// Prevent background scrolling when menu is open
+document.addEventListener('touchmove', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  if (menu.classList.contains('open')) {
+    if (!menu.contains(event.target)) {
+      event.preventDefault();
+    }
+  }
+}, { passive: false });
+</script>
+<!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
@@ -26,7 +90,7 @@
         <p>Dynamic, JSON-configurable forms. Totals auto-calculated and stored. Inline editing, CSV export, rankings, simulator, and Chart.js coral accuracy.</p>
       </div>
     </div>
-    </div>
+</div>
 <footer>FRC 4123 Scouting • Config-driven • SQLite</footer>
 
 </body></html>
