--- a/public/pages/match_simulator.html
+++ b/public/pages/match_simulator.html
@@ -6,6 +6,67 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
+<div class="mobile-nav">
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <div class="mobile-menu" id="mobileMenu">
+    <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
+    <a href="/" onclick="toggleMenu()">Home</a>
+    <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
+    <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
+    <a href="/pages/team_summary.html" onclick="toggleMenu()">Team Summary</a>
+    <a href="/pages/match_simulator.html" onclick="toggleMenu()">Match Simulator</a>
+    <a href="/pages/rankings.html" onclick="toggleMenu()">Rankings</a>
+    <a href="/pages/raw_match.html" onclick="toggleMenu()">Raw Match Data</a>
+    <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
+    <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
+    <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
+  </div>
+</div>
+<script>
+// Mobile menu functionality
+function toggleMenu() {
+  const menu = document.getElementById('mobileMenu');
+  const isOpening = !menu.classList.contains('open');
+  menu.classList.toggle('open');
+  document.body.classList.toggle('menu-open', isOpening);
+  if (isOpening) {
+    setTimeout(() => {
+      menu.scrollTop = 0;
+    }, 50);
+  }
+}
+
+// Close menu when clicking outside
+document.addEventListener('click', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  const hamburger = document.querySelector('.hamburger');
+  if (menu.classList.contains('open') && 
+      !menu.contains(event.target) && 
+      event.target !== hamburger) {
+    toggleMenu();
+  }
+});
+
+// Close menu on escape key
+document.addEventListener('keydown', function(event) {
+  if (event.key === 'Escape') {
+    const menu = document.getElementById('mobileMenu');
+    if (menu.classList.contains('open')) {
+      toggleMenu();
+    }
+  }
+});
+
+// Prevent background scrolling when menu is open
+document.addEventListener('touchmove', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  if (menu.classList.contains('open')) {
+    if (!menu.contains(event.target)) {
+      event.preventDefault();
+    }
+  }
+}, { passive: false });
+</script>
 <nav class="navbar">
   <a href="/">Home</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
