--- a/public/pages/pit_scouting.html
+++ b/public/pages/pit_scouting.html
@@ -9,18 +9,64 @@
 <div class="mobile-nav">
   <button class="hamburger" onclick="toggleMenu()">☰</button>
   <div class="mobile-menu" id="mobileMenu">
-    <a href="/">Home</a>
-    <a href="/pages/match_scouting.html">Match Scouting</a>
-    <a href="/pages/pit_scouting.html">Pit Scouting</a>
-    <a href="/pages/team_summary.html">Team Summary</a>
-    <a href="/pages/match_simulator.html">Match Simulator</a>
-    <a href="/pages/rankings.html">Rankings</a>
-    <a href="/pages/raw_match.html">Raw Match Data</a>
-    <a href="/pages/raw_match_edit.html">Raw Match Data Edit</a>
-    <a href="/pages/raw_pit.html">Raw Pit Data</a>
-    <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
+    <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
+    <a href="/" onclick="toggleMenu()">Home</a>
+    <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
+    <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
+    <a href="/pages/team_summary.html" onclick="toggleMenu()">Team Summary</a>
+    <a href="/pages/match_simulator.html" onclick="toggleMenu()">Match Simulator</a>
+    <a href="/pages/rankings.html" onclick="toggleMenu()">Rankings</a>
+    <a href="/pages/raw_match.html" onclick="toggleMenu()">Raw Match Data</a>
+    <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
+    <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
+    <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
   </div>
 </div>
+<script>
+// Mobile menu functionality
+function toggleMenu() {
+  const menu = document.getElementById('mobileMenu');
+  const isOpening = !menu.classList.contains('open');
+  menu.classList.toggle('open');
+  document.body.classList.toggle('menu-open', isOpening);
+  if (isOpening) {
+    setTimeout(() => {
+      menu.scrollTop = 0;
+    }, 50);
+  }
+}
+
+// Close menu when clicking outside
+document.addEventListener('click', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  const hamburger = document.querySelector('.hamburger');
+  if (menu.classList.contains('open') && 
+      !menu.contains(event.target) && 
+      event.target !== hamburger) {
+    toggleMenu();
+  }
+});
+
+// Close menu on escape key
+document.addEventListener('keydown', function(event) {
+  if (event.key === 'Escape') {
+    const menu = document.getElementById('mobileMenu');
+    if (menu.classList.contains('open')) {
+      toggleMenu();
+    }
+  }
+});
+
+// Prevent background scrolling when menu is open
+document.addEventListener('touchmove', function(event) {
+  const menu = document.getElementById('mobileMenu');
+  if (menu.classList.contains('open')) {
+    if (!menu.contains(event.target)) {
+      event.preventDefault();
+    }
+  }
+}, { passive: false });
+</script>
 
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
@@ -44,13 +90,6 @@
   </div>
 </div>
 <footer>FRC 4123 Scouting • Config-driven • SQLite</footer>
-<script>
-// Mobile menu functionality
-function toggleMenu() {
-  const menu = document.getElementById('mobileMenu');
-  menu.classList.toggle('open');
-}
-</script>
 <script type="module">
   import { buildPitForm } from "/js/dynamic_form.js";
   const app = await buildPitForm(document.getElementById('pit-root'));
