Working on the checklist and announcements in the home page and made an upload page

--- a/public/pages/rankings.html
+++ b/public/pages/rankings.html
@@ -20,6 +20,7 @@
     <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
     <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
     <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
+    <a href="/pages/csv_upload.html">CSV Upload</a>
   </div>
 </div>
 <script>
@@ -78,6 +79,7 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_match_edit.html">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
+  <a href="/pages/csv_upload.html">CSV Upload</a>
 </nav>
 <div class="container">
   <h1>Rankings</h1>
