Created and added config_creator.html to make editing the config easier and somewhat user-friendly. Also added the link to all the pages

--- a/public/pages/pit_scouting.html
+++ b/public/pages/pit_scouting.html
@@ -20,7 +20,8 @@
     <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
     <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
     <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
-    <a href="/pages/csv_upload.html">CSV Upload</a>
+    <a href="/pages/csv_upload.html" onclick="toggleMenu()">CSV Upload</a>
+    <a href="pages/config_creator.html" onclick="toggleMenu()">Config Creator</a>
   </div>
 </div>
 <script>
@@ -82,6 +83,7 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
   <a href="/pages/csv_upload.html">CSV Upload</a>
+  <a href="/pages/config_creator.html">Config Creator</a>
 </nav>
 <div class="container">
   <h1>Pit Scouting</h1>
