--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
     <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
     <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
+    <a href="/pages/csv_upload.html" onclick="toggleMenu()">CSV Upload</a>
+    <a href="/pages/config_creator.html" onclick="toggleMenu()">Config Creator</a>
   </div>
 </div>
 <script>
@@ -81,6 +83,8 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_match_edit.html">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
+  <a href="/pages/csv_upload.html">CSV Upload</a>
+  <a href="/pages/config_creator.html">Config Creator</a>
 </nav>
 <div class="container">
     <div class="center">
