--- a/public/pages/match_scouting.html
+++ b/public/pages/match_scouting.html
@@ -23,6 +23,7 @@
     <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
     <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
     <a href="/pages/csv_upload.html">CSV Upload</a>
+    <a href="/pages/config_creator.html">Config Creator</a>
   </div>
 </div>
 <script>
@@ -84,6 +85,7 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
   <a href="/pages/csv_upload.html">CSV Upload</a>
+  <a href="/pages/config_creator.html">Config Creator</a>
 </nav>
 <div class="container">
 
