--- a/public/pages/pit_scouting.html
+++ b/public/pages/pit_scouting.html
@@ -10,18 +10,20 @@
   <button class="hamburger" onclick="toggleMenu()">☰</button>
   <div class="mobile-menu" id="mobileMenu">
     <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
-    <a href="/" onclick="toggleMenu()">Home</a>
-    <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
-    <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
-    <a href="/pages/team_summary.html" onclick="toggleMenu()">Team Summary</a>
-    <a href="/pages/match_simulator.html" onclick="toggleMenu()">Match Simulator</a>
-    <a href="/pages/rankings.html" onclick="toggleMenu()">Rankings</a>
-    <a href="/pages/raw_match.html" onclick="toggleMenu()">Raw Match Data</a>
-    <a href="/pages/raw_match_edit.html" onclick="toggleMenu()">Raw Match Data Edit</a>
-    <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
-    <a href="/pages/raw_pit_edit.html" onclick="toggleMenu()">Raw Pit Data Edit</a>
-    <a href="/pages/csv_upload.html" onclick="toggleMenu()">CSV Upload</a>
-    <a href="pages/config_creator.html" onclick="toggleMenu()">Config Creator</a>
+  <a href="/">Home</a>
+  <a href="/pages/match_scouting.html">Match Scouting</a>
+  <a href="/pages/pit_scouting.html">Pit Scouting</a>
+  <a href="/pages/team_summary.html" class="admin-only">Team Summary</a>
+  <a href="/pages/match_simulator.html">Match Simulator</a>
+  <a href="/pages/rankings.html" class="admin-only">Rankings</a>
+  <a href="/pages/raw_match.html">Raw Match Data</a>
+  <a href="/pages/raw_match_edit.html" class="admin-only">Raw Match Data Edit</a>
+  <a href="/pages/raw_pit.html">Raw Pit Data</a>
+  <a href="/pages/raw_pit_edit.html" class="admin-only">Raw Pit Data Edit</a>
+  <a href="/pages/csv_upload.html" class="admin-only">CSV Upload</a>
+  <a href="/pages/config_creator.html">Config Creator</a>
+  <a href="/pages/admin.html" class="admin-only">User Management</a>
+  <a href="/pages/logout.html">Logout</a>
   </div>
 </div>
 <script>
@@ -70,20 +72,21 @@ document.addEventListener('touchmove', function(event) {
 }, { passive: false });
 </script>
 
-<!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
-  <a href="/pages/team_summary.html">Team Summary</a>
+  <a href="/pages/team_summary.html" class="admin-only">Team Summary</a>
   <a href="/pages/match_simulator.html">Match Simulator</a>
-  <a href="/pages/rankings.html">Rankings</a>
+  <a href="/pages/rankings.html" class="admin-only">Rankings</a>
   <a href="/pages/raw_match.html">Raw Match Data</a>
-  <a href="/pages/raw_match_edit.html">Raw Match Data Edit</a>
+  <a href="/pages/raw_match_edit.html" class="admin-only">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
-  <a href="/pages/raw_pit_edit.html">Raw Pit Data Edit</a>
-  <a href="/pages/csv_upload.html">CSV Upload</a>
+  <a href="/pages/raw_pit_edit.html" class="admin-only">Raw Pit Data Edit</a>
+  <a href="/pages/csv_upload.html" class="admin-only">CSV Upload</a>
   <a href="/pages/config_creator.html">Config Creator</a>
+  <a href="/pages/admin.html" class="admin-only">User Management</a>
+  <a href="/pages/logout.html">Logout</a>
 </nav>
 <div class="container">
   <h1>Pit Scouting</h1>
